<resources>
    <string name="app_name">Snooker Board</string>
    <string name="menu_bottom_rankings">Rankings</string>
    <string name="menu_bottom_friends">Friends</string>
    <string name="menu_bottom_play">Play</string>
    <string name="menu_bottom_statistics">Statistics</string>
    <string name="menu_bottom_history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_more">Main Menu</string>
    <string name="menu_item_undo">Undo</string>
    <string name="menu_item_rerack">Rerack</string>
    <string name="menu_item_add_red">Pot Extra Red</string>
    <string name="menu_item_remove_red">Remove Red</string>
    <string name="menu_item_concede_frame">Concede Frame</string>
    <string name="menu_item_concede_match">Concede Match</string>
    <string name="menu_item_cancel_match">Cancel Match</string>
    <string name="menu_drawer_rules">Rules</string>
    <string name="menu_drawer_about">About</string>
    <string name="game_total_score">(%1$d)</string>
    <string name="game_match_score">(%1$d - %2$d)</string>
    <string name="game_notification_channel_id" translatable="false">game_channel</string>
    <string name="game_notification_channel_name" translatable="false">Snooker</string>
    <string name="notification_title">Snooker Score</string>
    <string name="notification_text">Congratulations! You finished the game!</string>
    <string name="dialog_gen_no">NO</string>
    <string name="dialog_gen_yes">YES</string>
    <string name="action_safe">SAFE</string>
    <string name="action_miss">MISS</string>
    <string name="action_foul">FOUL</string>
    <string name="action_add_red">++RED</string>
    <string name="action_rerack">RERACK</string>
    <string name="action_end">END</string>
    <string name="action_finish">FINISH</string>
    <string name="action_undo">UNDO</string>
    <string name="action_cancel">Cancel</string>
    <string name="item_ball_view_ball">Ball to be clicked</string>
    <string name="fragment_login_title">FRAGMENT LOGIN</string>
    <string name="fragment_rankings_label_position">POSITION</string>
    <string name="fragment_rankings_label_name">NAME</string>
    <string name="fragment_rankings_label_points">POINTS</string>
    <string name="fragment_statistics_title">FRAGMENT STATISTICS</string>
    <string name="fragment_game_stats_btn_go_to_play">GO TO MAIN MENU</string>
    <string name="fragment_history_title">HISTORY FRAGMENT</string>
    <string name="fragment_friends_title">FRIENDS FRAGMENT</string>
    <string name="you">You</string>
    <string name="guest">Guest</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="f_play_label_player_a">Player 1</string>
    <string name="f_play_label_player_b">Player 2</string>
    <string name="f_play_label_vs">VS</string>
    <string name="f_play_contentd_desc_ball_first">Ball to click to choose who goes first</string>
    <string name="f_play_label_frames">Number of Frames</string>
    <string name="f_play_label_reds">Number of Reds</string>
    <string name="f_play_btn_reds_six">6</string>
    <string name="f_play_btn_reds_ten">10</string>
    <string name="f_play_btn_reds_fifteen">15</string>
    <string name="f_play_label_foul_modifier">Standard Foul Value</string>
    <string name="f_play_btn_foul_one">1</string>
    <string name="f_play_btn_foul_two">2</string>
    <string name="f_play_btn_foul_three">3</string>
    <string name="f_play_btn_foul_four">4</string>
    <string name="f_play_label_breaks_first">Player to Break</string>
    <string name="f_play_btn_break_random">Random</string>
    <string name="f_play_btn_play">START</string>
    <string name="toast_play_no_name">Please add player names to start a new match</string>
    <string name="toast_play_select_who_breaks">Please select who is breaking first</string>
    <string name="f_game_label_player_a">Player A</string>
    <string name="f_game_label_player_b">Player B</string>
    <string name="f_game_label_remaining">Remaining</string>
    <string name="f_game_label_difference">Difference</string>
    <string name="f_game_label_fouls">Number of Fouls</string>
    <string name="f_game_label_percentage">Pot Success</string>
    <string name="f_game_label_break">Highest Break</string>
    <string name="chapter_score">Frame Score</string>
    <string name="chapter_statistics">Frame Statistics</string>
    <string name="chapter_breakdown">Frame Breakdown</string>
    <string name="f_play_continue_game_description">There is a match in progress, what would you like to do?</string>
    <string name="f_play_continue_game_continue">Continue current match</string>
    <string name="f_play_continue_game_cancel">Cancel current match</string>
    <string name="toast_game_no_balls_left">There is no ball left on the table</string>
    <string name="f_foul_label_title">Foul</string>
    <string name="f_foul_label_choose_ball">Which ball was fouled?</string>
    <string name="f_foul_label_choose_action">Do you wish to continue?</string>
    <string name="f_game_foul_action_continue">OK, I will play</string>
    <string name="f_foul_action_force_continue">Force continue</string>
    <string name="f_foul_label_other_actions">Any other actions?</string>
    <string name="f_foul_action_free_ball">Free Ball</string>
    <string name="f_foul_action_remove_red">Remove Red</string>
    <string name="f_foul_cancel">Cancel</string>
    <string name="f_foul_ok">OK</string>
    <string name="toast_foul_invalid">Select a ball and an action to continue</string>
    <string name="f_statistics_header_break">Break</string>
    <string name="f_statistics_header_points">Points</string>
    <string name="f_statistics_header_score">Score</string>
    <string name="f_statistics_footer_total">Total</string>
    <string name="f_statistics_header_frame_id">#</string>
    <string name="f_statistics_header_percentage">%</string>
    <string name="f_rules_title">Simplified Snooker Rules</string>
    <string name="f_rules_heading_01_ball_terminology">Ball Terminology</string>
    <string name="f_rules_body_01_ball_terminology">* Cue ball - the white ball, the only ball that you may hit with the cue\n* Red - red in color, there are 15 at the start of the game\n* Colour - one of the six balls that are neither red nor white</string>
    <string name="f_rules_heading_02_ball_values">Ball values</string>
    <string name="f_rules_body_02_ball_values">Red - 1\nYellow - 2\nGreen - 3\nBrown - 4\nBlue - 5\nPink - 6\nBlack - 7</string>
    <string name="f_rules_heading_03_snooker_terminology">Snooker terminology</string>
    <string name="f_rules_body_03_snooker_terminology">Pot - to put a ball into a pocket (and have it stay there)\nFoul - to do something against the rules\nSnookered - to be unable to roll the cue ball in a straight line and hit the ball chosen.\nBall ON - the ball you intend to hit with the cue ball</string>
    <string name="f_rules_heading_04_fundamentals">Fundamentals</string>
    <string name="f_rules_body_04_fundamentals">1 - You hit the cue ball so that it, in turn, hits another ball and hopefully pots it.\n2 - You must not pot the cue ball\nWhen there are still red balls on the table:\n3 - Your first shot on every turn must be to hit a red with the cue ball\n4 - If you pot that red (red is the ball ON), then you score 1 point and your next shot may be on any of the colours (be sure to say which one you have chosen). The red stays in the pocket.\n5 - If you pot that colour (which is now the ball ON), then you score the value of the colour and your next shot must be a red. The colour goes back on its own spot. If it doesn\'t fit on its spot, then it goes on the highest valued spot available.\n6 - If you fail to pot, or if you foul, then your turn is ended and your opponent gets to try\n7 - continue with red-colour-red-colour until all reds are in the pockets\nWhen all red balls are gone:\n8. Balls are pocketed in this order - yellow(2), green(3), brown(4), blue(5), pink(6), black(7). They stay in the pocket.</string>
    <string name="f_rules_heading_05_foul_rules">Foul Rules</string>
    <string name="f_rules_body_05_foul_rules">1 - Once struck, cue ball must make contact with ball ON first otherwise, foul is committed\n2 - If your cue ball does not hit anything on the table, your opponent may choose to take the shot or turn the table back to you\n3 - If you commit a foul and your opponent is snookered on all balls ON, he may be allowed to select a freeball(any ball on the table). The freeball, for this shot only, becomes another ball ON and has the same value and is respotted if potted.\n4 - If your cue ball first hits a ball other than the ball ON, then the penalty is the value of the ball struck or 4 points, whichever is greater.\n5 - If you pot a ball other than the ball ON, then you do NOT score the value of the ball ON but your opponent scores the value of the ball pocketed.\n6 - If you touch any ball on the table at any time,then the penalty is the value of the ball touched or 4 points, whichever is greater.</string>
    <string name="f_rules_heading_06_game_end">The game ends when</string>
    <string name="f_rules_body_06_game_end">1. A player resigns because there are not enough balls on the table to make up for the opponent\\\'s score OR he does not have enough options to execute a good snooker to force the opponent into a foul.\n2. All reds and ball colors are pocketed.</string>
    <string name="f_rules_heading_07_winner">Winner</string>
    <string name="f_rules_body_07_winner">The player with the most points at the end of the game wins!</string>
    <string name="f_rules_heading_08_more_info">More Info</string>
    <string name="f_rules_body_08_more_info">For more information visit: \nhttp://www.rulesofsnooker.com/snooker-for-beginners.html</string>
    <string name="f_about_title">About me</string>
    <string name="f_about_text">Hi, \n\nThanks for trying out my app! I am an amateur app developer with a life long passion for snooker. I wanted to do something for this sport so I set out to create this app in my spare time. My dream is to improve this app constantly and make it useful to the snooker community, by implementing a login to save all previous matches showing career statistics and adding many new features.\n\nUnfortunately my time and coding skills are not at par with my wishes, so if you feel inspired to help I\'d be glad to share in my efforts. Please send me an e-mail at:</string>
    <string name="f_about_email">victor.cocuz@yahoo.com</string>
    <string name="sp_file_key">PREFERENCE_FILE_KEY</string>
    <string name="sp_match_frames">matchFrames</string>
    <string name="sp_match_reds">matchReds</string>
    <string name="sp_match_foul">matchFoul</string>
    <string name="sp_match_first">matchFirst</string>
    <string name="sp_match_frame_count">matchCrtFrame</string>
    <string name="sp_match_frame_max">matchFrameMax</string>
    <string name="sp_match_broke_last">matchBrokeLast</string>
    <string name="sp_match_crt_player">matchCrtPlayer</string>
    <string name="sp_match_state">matchState</string>
    <string name="sp_match_name_first_a">matchNameFirstA</string>
    <string name="sp_match_name_first_b">matchNameFirstB</string>
    <string name="sp_match_name_last_a">matchNameLastA</string>
    <string name="sp_match_name_last_b">matchNameLastB</string>
    <string name="sp_match_freeball_visibility">matchFreeballVisibility</string>
    <string name="sp_match_freeball_selection">matchFreeballSelection</string>
    <string name="cd_foul_modifier_info">Foul Modifier Info</string>
    <string name="cd_logo">Logo</string>
    <string name="autofill_name_given">personGivenName</string>
    <string name="autofill_name_family">personFamilyName</string>
    <string name="shared_pref_frame_max">frameMax</string>
    <string name="vs">VS</string>
</resources>