<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/rankingsFragment"
        android:icon="@drawable/temp_ic_menu_rankings"
        android:title="@string/menu_bottom_rankings" />
    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/temp_ic_menu_friends"
        android:title="@string/menu_bottom_friends" />
    <item
        android:id="@+id/playFragment"
        android:icon="@drawable/temp_ic_menu_play"
        android:title="@string/menu_bottom_play" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/temp_ic_menu_history"
        android:title="@string/menu_bottom_history" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/temp_menu_ic_statistics"
        android:title="@string/menu_bottom_statistics" />
</menu>